# groovyrs

./: BUGS.md  Cargo.toml  README.md
.github/workflows/: release.yml
completions/: _groovy
docs/: index.html  reference.html  report.html
examples/: Classes.groovy  Closures.groovy  Concat.groovy  Division.groovy  Fib.groovy  FizzBuzz.groovy  Hello.groovy  Inheritance.groovy  Loops.groovy  Maps.groovy  Operators.groovy  Ranges.groovy
man/man1/: groovy.1  groovyall.1
parity-scripts/: arith_precedence.groovy  division_matrix.groovy  formatting.groovy  nested_loops.groovy  run.sh  while_break.groovy
src/: ast.rs  banner.rs  cli.rs  compiler.rs  dap.rs  host.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs  rust_ffi.rs
tests/: eval.rs  ffi.rs  parity.rs
tests/data/: parity_expected.txt
