[package]
name = "groovy"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Groovy as a fusevm frontend: lexer, parser, and compiler to fusevm::Chunk, run on the shared three-tier Cranelift JIT — no bespoke VM or JVM"
license = "MIT"
documentation = "https://docs.rs/groovy"
authors = ["MenkeTechnologies <linux.dev25.com>"]
repository = "https://github.com/MenkeTechnologies/groovyrs"
homepage = "https://menketechnologies.github.io/groovyrs/"
readme = "README.md"
keywords = ["groovy", "compiler", "jit", "fusevm", "bytecode"]
categories = ["command-line-utilities", "compilers"]
publish = true
# Dev-only artifacts kept out of the published crate. Consumers get src + the
# `groovy` bin — not CI config, the integration-test corpus, or the .groovy
# examples. None are referenced at compile time (no include_str! into them), so
# the packaged crate still builds and its bin runs.
exclude = [
    "/.github/",
    "/tests/",
    "/examples/",
    "/docs/",
]

# groovyrs is a standalone crate, not a workspace member. An explicit empty
# `[workspace]` stops cargo walking up to the MenkeTechnologiesMeta parent.
[workspace]

[lib]
name = "groovyrs"
path = "src/lib.rs"

[[bin]]
name = "groovy"
path = "src/main.rs"

# Development-only differential harnesses (not run in CI). `parity` diffs the
# example corpus against a live `groovy`; `parity-fuzz` generates deterministic
# snippets and diffs each `groovy -e` against `groovyrs -e`. Both need `groovy`
# on PATH; the CI-safe frozen replay lives in tests/parity.rs.
[[bin]]
name = "parity"
path = "src/bin/parity.rs"

[[bin]]
name = "parity-fuzz"
path = "src/bin/parity_fuzz.rs"

# Offline generator for docs/reference.html — renders the builtin/keyword
# reference (the src/lsp.rs corpus) as a static HUD page. Run before pushing
# GitHub Pages so the page never drifts from what the language server knows.
[[bin]]
name = "gen-docs"
path = "src/bin/gen_docs.rs"

[dependencies]
# Groovy executes on fusevm. groovyrs is a pure frontend: it lexes/parses Groovy
# script source and lowers it to fusevm bytecode (src/compiler.rs). There is no
# local vm.rs/jit.rs and no JVM — execution and codegen live in the shared
# engine behind zshrs, stryke, awkrs, elisp, ruby, python, php, node, java.
#
# `jit-disk-cache` turns on fusevm's three-tier Cranelift JIT *and* its
# persistent on-disk cache of compiled native code (keyed by chunk hash), so hot
# Groovy loops trace-compile and warm runs skip recompilation. `aot` enables the
# ahead-of-time object emitter used by later `groovy --build` work.
#
# `ffi` enables fusevm's inline-Rust FFI bridge: a `rust { pub extern "C" fn … }`
# block compiles to a cached cdylib whose exported functions become callable by
# name from Groovy (src/rust_ffi.rs desugars the block; src/host.rs routes the
# `__rust_compile` / by-name-call builtins into `fusevm::ffi`).
fusevm = { version = "0.14.12", features = ["jit", "jit-disk-cache", "aot", "ffi"] }

thiserror = "2.0"

# LSP (`groovy --lsp`) + DAP (`groovy --dap`) over stdio. `lsp-server`/`lsp-types`
# frame the JSON-RPC language server; `serde_json` frames the DAP wire protocol;
# `libc` gives the DAP adapter the pipe + dup2 to capture the debuggee's stdout
# (println) so program output streams as `output` events rather than corrupting
# the JSON channel, plus the orphan-guard (getppid) for the language server.
lsp-server = "0.7.9"
lsp-types = "0.97.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
